ajuste doble buscador identificacion

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -739,7 +739,12 @@
                     </select>
 
                     <div class="search-box ms-md-2 flex-shrink-0 mb-3 mb-md-0">
-                        <input type="text" class="form-control" style="width: 400px;margin-right: 39px;" placeholder="Buscar el {{termino_cuerpo}}" [(ngModel)]="term3"><!--"service.searchTerm"-->
+                        <input type="text" class="form-control" style="width: 400px;" placeholder="Buscar el {{termino_cuerpo}}" [(ngModel)]="term3">
+                        <i class="ri-search-line search-icon"></i>
+                    </div>
+                    
+                    <div class="search-box ms-md-2 flex-shrink-0 mb-3 mb-md-0">
+                        <input type="text" class="form-control" style="width: 400px;margin-right: 39px;" placeholder="Buscar por {{termino_articulo}}" [(ngModel)]="term9">
                         <i class="ri-search-line search-icon"></i>
                     </div>
                     
