--- a/src/app/pages/projects/create/evaluation/follow/follow.component.html
+++ b/src/app/pages/projects/create/evaluation/follow/follow.component.html
@@ -105,7 +105,7 @@
                 <div class="col-md-12">
                     <div class="card-body">
                         <h6>4. Carga tu evidencia.</h6>
-                        <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ previewsContainer: '#myPreviewsContainer', acceptedFiles: 'image/*,application/*' }" (error)="onUploadError($event)" (success)="onFileSelectedEvaluation($event)">
+                        <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ previewsContainer: '#myPreviewsContainer', acceptedFiles: 'image/*,application/*' }" (error)="onUploadError($event)" (addedFile)="addFileSelectedEvaluation($event)" (success)="onFileSelectedEvaluation($event)">
                         </dropzone><!--,.pdf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.zip-->
                         <div class="table table-striped files" style="display: none;" id="myPreviewsContainer">
                         </div>
@@ -635,7 +635,7 @@ sistema.</p>
             
             <div class="mb-3">
                 <label for="area-field" class="form-label"><h6>2. Carga evidencia.</h6></label>
-                <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ previewsContainer: '#myPreviewsContainer2', acceptedFiles: 'image/*,application/*' }" (success)="onFileSelected($event)">
+                <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ previewsContainer: '#myPreviewsContainer2', acceptedFiles: 'image/*,application/*' }" (addedFile)="addFileSelected($event)" (success)="onFileSelected($event)">
                 </dropzone>
                 <div class="table table-striped files" style="display: none;" id="myPreviewsContainer2">
                 </div>
