--- a/src/app/pages/extrapages/profile/settings/settings.component.html
+++ b/src/app/pages/extrapages/profile/settings/settings.component.html
@@ -217,31 +217,175 @@
                                         <div class="invalid-feedback">Por favor ingresar proyectos.</div>
                                     </div>
                                     </div>
-                                    
-                                    <div class="col-lg-6" *ngIf="rol != 2 && rol != 1 && (rol_user == 1 || rol_user == 2) ">
-                                    <div class="mb-3">
-                                        <label for="teammembersAreas" class="form-label">Areas Administrativas</label>
-                                        <select class="form-control form-select" aria-label="Area Administrativa" formControlName="areas" placeholder="Seleccione Area Administrativa"
-                                        (change)="selectArea($event)" multiple>
-                                            <option value="" selected>Todas</option>
-                                            <option *ngFor="let r of areas;" value="{{r.id}}">{{r.nombre}}</option>
-                                        </select>
-                                        <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
-                                    </div>
-                                    </div>
-    
-                                    <ng-container *ngFor="let item of items;let i = index;">                                    
-                                        <div class="col-lg-6">
-                                        <div class="mb-3">
-                                            <label for="area-field" class="form-label">Sub Area Administrativa</label>
-                                            <select class="form-control form-select mb-3" placeholder="Seleccione Sub Area Administrativa" (change)="selectAreaChildren($event, i)">
-                                                                <option value="" selected>Seleccione Sub Area Administrativa</option>
-                                                                <option *ngFor="let o of item.options;" value="{{o.id}}">{{o.nombre}}</option>
-                                            </select>
-                                            <div class="invalid-feedback">Por favor ingresar sub-area administrativa.</div>
+
+                                    <div class="col-lg-12" *ngIf="rol != 2 && rol != 1 && (rol_user == 1 || rol_user == 2)">
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="card">
+                                        
+                                                    <div class="card-body">
+                                                        <div id="customerList">
+                                                            <div class="row g-4 mb-3">
+                                                                <div class="col-sm-auto">
+                                                                    <div class="d-flex gap-1">
+                                                                        <h4 class="card-title mb-0">Areas del Usuario</h4>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-sm">
+                                                                    <div class="d-flex justify-content-sm-end">
+                                                                        <div class="search-box ms-2">
+                                                                            <!--<input type="text" class="form-control search" placeholder="Buscar..."
+                                                                                [(ngModel)]="service.searchTerm">
+                                                                            <i class="ri-search-line search-icon"></i>-->
+                                                                        </div>
+                                                                        
+                                                                        <button type="button" style="margin-left:20px;" class="btn btn-success add-btn" data-bs-toggle="modal"
+                                                                            id="create-btn" data-bs-target="#showModal" (click)="openModal(content)"><i
+                                                                                class="ri-add-line align-bottom me-1"></i> Agregar Area</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                        
+                                                            <div class="table-responsive table-card mt-3 mb-1">
+                                                                <table class="table">
+                                                                    <thead>
+                                                                        <tr class="bg-light text-muted">
+                                                                            <th class="sort" data-sort="id" style="width: 120px;">Id</th>
+                                                                            <th class="sort" data-sort="nombre" style="width: 400px;">Nombre</th>
+                                                                            <th class="sort" data-sort="padre">Padre</th>
+                                                                            <th class="sort" style="width: 100px;">Acción</th>
+                                                                        </tr>
+                                                                    </thead>
+                                                                    <tbody>
+                                                                        <tr *ngIf="areas_permisos_all.length < 1">
+                                                                            <td colspan="4" style="text-align: center;">Por defecto el usuario podra ver todas las areas</td>
+                                                                        </tr>
+                                                                        <tr *ngFor="let data of areas_permisos_all" id="lj_{{data.id}}">
+                                                                            <td><ngb-highlight [result]="data.id">{{data.id}}</ngb-highlight></td>
+                                                                            <td><ngb-highlight [result]="data.nombre">{{data.nombre}}</ngb-highlight></td>
+                                                                            <td><ngb-highlight [result]="data.padre">{{data.padre}}</ngb-highlight></td>
+                                                                            <td>
+                                                                                <div class="d-flex gap-2">
+                                                                                    <div class="hstack gap-3 fs-15">
+                                                                                        <a href="javascript:void(0);" class="link-danger" 
+                                                                                        title="Eliminar"
+                                                                                        data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
+                                                                                        (click)="confirm(deleteModel,data.id)"><i class="ri-delete-bin-5-line"></i></a>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                            </div>
+                                        
+                                                            <!--<div class="row justify-content-md-between align-items-md-center">
+                                                                <div class="col col-sm-6">
+                                                                    <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
+                                                                        Mostrando página 1 de
+                                                                        {{pageTotal((TaskDatas ? TaskDatas.length : 0))}} de {{TaskDatas ? TaskDatas.length : 0}}
+                                                                        registros
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col col-sm-6">
+                                                                    <div class="text-sm-right float-sm-end listjs-pagination">
+                                                                        <ngb-pagination [collectionSize]="TaskDatas ? TaskDatas.length : 0" [(page)]="service.page"
+                                                                            [pageSize]="service.pageSize">
+                                                                        </ngb-pagination>
+                                                                    </div>
+                                                                </div>
+                                                            </div>-->
+                                                        </div>
+                                                    </div><!-- end card -->
+                                                </div>
+                                                <!-- end col -->
+                                            </div>
                                         </div>
-                                        </div>
-                                    </ng-container>
+
+                                        <!-- Add ListJs Data -->
+<ng-template #content role="document" let-modal>
+    <div class="modal-header bg-light p-3">
+        <h5 class="modal-title" id="exampleModalLabel">Area</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="close-modal"
+            (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <form (ngSubmit)="saveArea()" [formGroup]="areaForm" class="tablelist-form" autocomplete="off">
+        <div class="modal-body">
+
+            <input type="hidden" name="id" value="" formControlName="ids" />
+            <div class="row">
+            <div class="col-12">    
+            <div class="mb-3" id="modal-id" style="display: none;">
+                <label for="id-field" class="form-label">ID</label>
+                <input type="text" id="id-field" class="form-control" placeholder="ID" readonly />
+            </div>
+            </div>
+            
+            <div class="col-lg-12">
+                <div class="mb-3">
+                    <label for="teammembersAreas" class="form-label">Areas Administrativas</label>
+                    <select class="form-control form-select" aria-label="Area Administrativa" formControlName="areas" placeholder="Seleccione Area Administrativa"
+                    (change)="selectArea($event)" multiple>
+                        <!--<option value="" selected>Todas</option>-->
+                        <option *ngFor="let r of areas;" value="{{r.id}}">{{r.nombre}}</option>
+                    </select>
+                    <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
+                </div>
+            </div>
+
+                <ng-container *ngFor="let item of items;let i = index;">                                    
+                    <div class="col-lg-12">
+                    <div class="mb-3">
+                        <label for="area-field" class="form-label">Sub Area Administrativa</label>
+                        <select class="form-control form-select mb-3" placeholder="Seleccione Sub Area Administrativa" (change)="selectAreaChildren($event, i)">
+                                            <option value="" selected>Seleccione Sub Area Administrativa</option>
+                                            <option *ngFor="let o of item.options;" value="{{o.id}}">{{o.nombre}}</option>
+                        </select>
+                        <div class="invalid-feedback">Por favor ingresar sub-area administrativa.</div>
+                    </div>
+                    </div>
+                </ng-container>
+
+            </div>
+
+        </div>
+        <div class="modal-footer">
+            <div class="hstack gap-2 justify-content-end">
+                <!--<button type="button" class="btn btn-light" data-bs-dismiss="modal"
+                    (click)="modal.close('Close click')">Cerrar</button>-->
+                <button type="submit" class="btn btn-success" id="add-btn">Agregar</button>
+            </div>
+        </div>
+    </form>
+</ng-template>
+
+<!-- removeItemModal -->
+<ng-template #deleteModel let-modal>
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="btn-close"
+                (click)="modal.dismiss('Cross click')"></button>
+        </div>
+        <div class="modal-body">
+            <div class="mt-2 text-center">
+                <lord-icon src="https://cdn.lordicon.com/gsqxdxog.json" trigger="loop"
+                    colors="primary:#405189,secondary:#f06548" style="width:90px;height:90px"></lord-icon>
+                <div class="mt-4 pt-2 fs-15 mx-4 mx-sm-5">
+                    <h4>Está a punto de eliminar este registro</h4>
+                    <p class="text-muted mx-4 mb-0">Eliminar su registro eliminará toda su información de nuestro
+sistema.</p>
+                </div>
+            </div>
+            <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
+                <button class="btn btn-link link-success fw-medium text-decoration-none" data-bs-dismiss="modal"
+                    (click)="modal.close('Close click')"><i class="ri-close-line me-1 align-middle"></i> Cerrar</button>
+                <button type="button" class="btn w-sm btn-danger " id="delete-product" (click)="deleteData(deleteId)"
+                    (click)="modal.close('Close click')">Si, Remover!</button>
+            </div>
+        </div>
+    </div><!-- /.modal-content -->
+</ng-template>
+                                    </div>
                                     
                                     <!--<div class="col-lg-6">
                                         <div class="mb-3">
