orden sincronizacion y label

--- a/src/app/pages/extrapages/profile/settings/settings.component.html
+++ b/src/app/pages/extrapages/profile/settings/settings.component.html
@@ -251,8 +251,8 @@
                                                                     <thead>
                                                                         <tr class="bg-light text-muted">
                                                                             <th class="sort" data-sort="id" style="width: 120px;">Id</th>
-                                                                            <th class="sort" data-sort="nombre" style="width: 400px;">Nombre</th>
-                                                                            <th class="sort" data-sort="padre">Padre</th>
+                                                                            <th class="sort" data-sort="nombre" style="width: 400px;">Area</th>
+                                                                            <th class="sort" data-sort="padre">Area Superior</th>
                                                                             <th class="sort" style="width: 100px;">Acción</th>
                                                                         </tr>
                                                                     </thead>
